<?xml version="1.0" encoding="utf-8"?>
<shortcuts  xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
        * shortcutShortLabel : 바로가기의 목적을 설명하는 간결한 구문입니다. 가능하면 이 간단한 설명은 10자(영문 기준)로 제한하세요.
        * shortcutLongLabel : 바로가기의 목적을 설명하는 확장된 구문입니다. 데이터가 충분한 경우 100, 000픽셀을 반환하므로 런처는 android:shortcutShortLabel 가능하면 이 분량을 최대 12자(영문 25자)까지 입력할 수 있습니다
    -->
    <shortcut
        android:shortcutId="shortcutId1"
        android:enabled="true"
        android:icon="@drawable/img_cat_archer"
        android:shortcutShortLabel="@string/short_cut_short_label1"
        android:shortcutLongLabel="@string/short_cut_long_label1"
        android:shortcutDisabledMessage="@string/short_cut_disabled_message1">
        <intent
            android:action="android.intent.action.CREATE_SHORTCUT"
            android:targetPackage="com.hyundaiht.shortcuttest"
            android:targetClass="com.hyundaiht.shortcuttest.ShortCut1Activity">
        </intent>
<!--        <categories android:name="android.shortcut.conversation" />-->
<!--        <capability-binding android:key="actions.intent.CREATE_MESSAGE" />-->
    </shortcut>

    <shortcut
        android:shortcutId="shortcutId2"
        android:enabled="true"
        android:icon="@drawable/img_cat_knight"
        android:shortcutShortLabel="@string/short_cut_short_label2"
        android:shortcutLongLabel="@string/short_cut_long_label2"
        android:shortcutDisabledMessage="@string/short_cut_disabled_message2">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.hyundaiht.shortcuttest"
            android:targetClass="com.hyundaiht.shortcuttest.ShortCut2Activity">
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="shortcutId3"
        android:enabled="true"
        android:icon="@drawable/img_cat_wizard"
        android:shortcutShortLabel="@string/short_cut_short_label3"
        android:shortcutLongLabel="@string/short_cut_long_label3"
        android:shortcutDisabledMessage="@string/short_cut_disabled_message3">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.hyundaiht.shortcuttest"
            android:targetClass="com.hyundaiht.shortcuttest.ShortCut2Activity">
        </intent>

        <capability android:name="actions.intent.START_EXERCISE">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.hyundaiht.shortcuttest"
                android:targetClass="com.hyundaiht.shortcuttest.MainActivity">
                <parameter
                    android:name="exercise.name"
                    android:key="exerciseType"/>
            </intent>
        </capability>
    </shortcut>

    <shortcut
        android:shortcutId="shortcutId4"
        android:enabled="true"
        android:icon="@drawable/img_cat_wizard"
        android:shortcutShortLabel="@string/short_cut_short_label3"
        android:shortcutLongLabel="@string/short_cut_long_label3"
        android:shortcutDisabledMessage="@string/short_cut_disabled_message3">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.hyundaiht.shortcuttest"
            android:targetClass="com.hyundaiht.shortcuttest.ShortCut2Activity">
        </intent>

        <capability android:name="actions.intent.START_EXERCISE">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.hyundaiht.shortcuttest"
                android:targetClass="com.hyundaiht.shortcuttest.MainActivity">
                <parameter
                    android:name="exercise.name"
                    android:key="exerciseType"/>
            </intent>
        </capability>
    </shortcut>

    <shortcut
        android:shortcutId="shortcutId5"
        android:enabled="true"
        android:icon="@drawable/img_cat_wizard"
        android:shortcutShortLabel="@string/short_cut_short_label3"
        android:shortcutLongLabel="@string/short_cut_long_label3"
        android:shortcutDisabledMessage="@string/short_cut_disabled_message3">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.hyundaiht.shortcuttest"
            android:targetClass="com.hyundaiht.shortcuttest.ShortCut2Activity">
        </intent>

        <capability android:name="actions.intent.START_EXERCISE">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.hyundaiht.shortcuttest"
                android:targetClass="com.hyundaiht.shortcuttest.MainActivity">
                <parameter
                    android:name="exercise.name"
                    android:key="exerciseType"/>
            </intent>
        </capability>
    </shortcut>

    <shortcut
        android:shortcutId="shortcutId6"
        android:enabled="true"
        android:icon="@drawable/img_cat_wizard"
        android:shortcutShortLabel="@string/short_cut_short_label3"
        android:shortcutLongLabel="@string/short_cut_long_label3"
        android:shortcutDisabledMessage="@string/short_cut_disabled_message3">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.hyundaiht.shortcuttest"
            android:targetClass="com.hyundaiht.shortcuttest.ShortCut2Activity">
        </intent>

        <capability android:name="actions.intent.START_EXERCISE">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.hyundaiht.shortcuttest"
                android:targetClass="com.hyundaiht.shortcuttest.MainActivity">
                <parameter
                    android:name="exercise.name"
                    android:key="exerciseType"/>
            </intent>
        </capability>
    </shortcut>
</shortcuts>